--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,27 @@
     "description": "publications e.g. slide, presentations",
 
     "require-dev": {
+        "mockery/mockery": "0.9.1",
+        "phpunit/phpunit": "4.4.5",
+        "behat/mink-goutte-driver": "~1.1.0",
+        "behat/mink": "~1.6.1",
+        "doctrine/common": "2.5.0",
+        "squizlabs/php_codesniffer": "^2.0.0",
+        "fluentdom/fluentdom": "v4.1.3",
+        "mikey179/vfsStream": "1.4.0"
     },
     
     "require":{
         "danack/jig": "^0.20.4",
         "intahwebz/configurator": "^0.2.8",
-        "oyejorge/less.php": "v1.7.0.1"
+        "oyejorge/less.php": "v1.7.0.1",
+        "danack/tier": "^0.5.0",
+        "room11/caching": "^0.0.4",
+        "room11/http": "^0.1.2"
     },
     "autoload": {
         "psr-0": {
+            "Article": "test/",
             "Docs": "src/"
         }
     },
