--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -56,7 +56,7 @@ http {
         }
 
 
-        location ~* /(.*).php {
+        location ~* /(.*).php$ {
             # Mitigate https://httpoxy.org/ vulnerabilities
             fastcgi_param HTTP_PROXY "";
             # fastcgi_index index.php;
