Add debugging for 404.

--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -30,13 +30,13 @@ http {
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/javascript text/xml application/xml application/rss+xml application/atom+xml application/rdf+xml;
 
 
-    server {
-        listen 80 default_server;
-        listen 8000 default_server;
-        location / {
-            return 404;
-        }
-    }
+    #server {
+    #    listen 80 default_server;
+    #    listen 8000 default_server;
+    #    location / {
+    #        return 404;
+    #    }
+    #}
 
     # the normal block
     server {
@@ -46,6 +46,7 @@ http {
         root /var/www/public;
 
         index index.html;
+        add_header X-DJA docs;
 
         location ~* ^(.+).(bmp|bz2|css|gif|doc|gz|html|ico|jpg|jpeg|js|mid|midi|png|rtf|rar|pdf|ppt|tar|tgz|txt|wav|xls|zip)$ {
             #access_log off;
